--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     --Blue: hsl(219, 85%, 26%);
     --White: hsl(0, 0%, 100%);
     --Very-light-grayish-blue: hsl(210, 60%, 98%);
-    --Light-grayish-blue1: hsl(211, 68%, 94%);
-    --Light-grayish-blue2: hsl(205, 33%, 90%);
+    --Light-grayish-blue-1: hsl(211, 68%, 94%);
+    --Light-grayish-blue-2: hsl(205, 33%, 90%);
     --Grayish-blue: hsl(219, 14%, 63%);
     --Dark-grayish-blue: hsl(219, 12%, 42%);
     --Very-dark-blue: hsl(224, 21%, 14%);
@@ -79,4 +79,47 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+strong{
+    color: --Very-dark-blue;
+    cursor: pointer;
+}
+strong:hover{
+    color: var(--Blue)
+}
+.unread{
+    background-color: var(--Light-grayish-blue-1);
+}
+.unread p:first-of-type::after{
+   content:"";
+   background-color: var(--Red);
+   width: 10px;
+   height: 10px;
+   display:inline-block;
+   border-radius: 50%;
+}
+/* message-card{
+    display:flex;
+    align-items: center;
+} */
+.message{
+    /* display: flex;
+    align-items: center; */
+    padding: 1rem;
+    border:1px solid var(--Light-grayish-blue-2);
+    border-radius: 3rem;
+    cursor:pointer;
+    margin: 0 0 0 5rem;
+}
+message:hover{
+    background-color:  var(--Light-grayish-blue-1);
+}
+.chess_img{
+    margin-left: auto;
+}
+@media screen and (max-width:550px) {
+    .container{
+        margin: 0;
+    }
 }
